--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>This is the official hub for reporting bugs, requesting features, and providing feedback for the RightNow productivity app.</p>
             
             <div class="cta-buttons">
-                <a href="https://github.com/yourusername/rtnwapp/issues/new/choose" class="btn btn-primary">Report an Issue</a>
+                <a href="https://github.com/aeropher/rtnwapp/issues/new/choose" class="btn btn-primary">Report an Issue</a>
                 <a href="https://rtnw.app" class="btn btn-secondary">Try RightNow</a>
             </div>
         </section>
@@ -30,19 +30,19 @@
             <div class="info-card">
                 <h3>🐛 Report Bugs</h3>
                 <p>Found something not working right? Let us know so we can fix it.</p>
-                <a href="https://github.com/yourusername/rtnwapp/issues/new?template=bug_report.md">Report a Bug →</a>
+                <a href="https://github.com/aeropher/rtnwapp/issues/new?template=bug_report.md">Report a Bug →</a>
             </div>
 
             <div class="info-card">
                 <h3>✨ Request Features</h3>
                 <p>Have an idea to make RightNow better? We'd love to hear it!</p>
-                <a href="https://github.com/yourusername/rtnwapp/issues/new?template=feature_request.md">Request a Feature →</a>
+                <a href="https://github.com/aeropher/rtnwapp/issues/new?template=feature_request.md">Request a Feature →</a>
             </div>
 
             <div class="info-card">
                 <h3>❓ Ask Questions</h3>
                 <p>Need help or clarification? The community is here to help.</p>
-                <a href="https://github.com/yourusername/rtnwapp/issues/new?template=question.md">Ask a Question →</a>
+                <a href="https://github.com/aeropher/rtnwapp/issues/new?template=question.md">Ask a Question →</a>
             </div>
         </section>
 
@@ -102,9 +102,9 @@
         <div class="container">
             <p>&copy; 2024 RightNow. All issues are triaged and implemented in our private development repository.</p>
             <div class="footer-links">
-                <a href="https://github.com/yourusername/rtnwapp">GitHub</a>
+                <a href="https://github.com/aeropher/rtnwapp">GitHub</a>
                 <a href="https://rtnw.app">Try RightNow</a>
-                <a href="https://github.com/yourusername/rtnwapp/discussions">Discussions</a>
+                <a href="https://github.com/aeropher/rtnwapp/discussions">Discussions</a>
             </div>
         </div>
     </footer>
