Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <title>RightNow - Issues & Feedback</title>
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="Official issue tracker and feedback hub for RightNow - the capacity-first productivity app">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="Logo1.png">
+    <link rel="apple-touch-icon" href="Logo1.png">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>RightNow</h1>
-            <p class="tagline">Achieve more by doing less with capacity-first task planning</p>
+            <div class="header-content">
+                <img src="Logo1.png" alt="RightNow Logo" class="logo">
+                <div>
+                    <h1>RightNow</h1>
+                    <p class="tagline">Achieve more by doing less with capacity-first task planning</p>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -89,11 +98,8 @@
         <section class="security">
             <div class="security-notice">
                 <h3>🔒 Security Issues</h3>
-                <p>Please <strong>do not</strong> open public issues for security vulnerabilities. Instead:</p>
-                <ul>
-                    <li>Email us at <a href="mailto:security@rtnw.app">security@rtnw.app</a></li>
-                    <li>Or use GitHub's private vulnerability reporting</li>
-                </ul>
+                <p>Please <strong>do not</strong> open public issues for security vulnerabilities.</p>
+                <p>Use GitHub's private vulnerability reporting feature to report security issues privately.</p>
             </div>
         </section>
     </main>
