Enhance response times section with personal developer note and updated timelines

--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@
 
         <section class="response-times">
             <h2>Response Times</h2>
+            <p>I'm a solo developer with a full-time job, but I care deeply about this project and will get to your issues as soon as I can!</p>
             <ul>
-                <li><strong>Critical bugs:</strong> Within 24-48 hours</li>
-                <li><strong>General issues:</strong> Within 3-5 business days</li>
-                <li><strong>Feature requests:</strong> Reviewed monthly for roadmap planning</li>
+                <li><strong>Critical bugs:</strong> I'll try to look at these quickly</li>
+                <li><strong>General issues:</strong> Usually within a week</li>
+                <li><strong>Feature requests:</strong> I review these regularly and add them to my backlog</li>
             </ul>
+            <p>Your patience and understanding are greatly appreciated! 💚</p>
         </section>
 
         <section class="guidelines">
