Add features overview section and create FEATURES.md for detailed app functionalities

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
             <p>Your patience and understanding are greatly appreciated! 💚</p>
         </section>
 
+        <section class="features-section">
+            <h2>Learn More About RightNow</h2>
+            <p>Discover all the features that make RightNow the smarter way to manage your tasks and time.</p>
+            <a href="FEATURES.md" class="btn btn-secondary">View All Features →</a>
+        </section>
+
         <section class="guidelines">
             <h2>Before Creating an Issue</h2>
             <ol>
