Add blog functionality with dynamic loading and styling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="cta-buttons">
                 <a href="https://github.com/aeropher/rtnwapp/issues/new/choose" class="btn btn-primary">Report an Issue</a>
                 <a href="https://rtnw.app" class="btn btn-secondary">Try RightNow</a>
+                <a href="blog.html" class="btn btn-secondary">Read Blog</a>
             </div>
         </section>
 
