Remove features section and update footer links to include Docs and Blog

--- a/index.html
+++ b/index.html
@@ -88,12 +88,6 @@
             <p>Your patience and understanding are greatly appreciated! 💚</p>
         </section>
 
-        <section class="features-section">
-            <h2>Learn More About RightNow</h2>
-            <p>Discover all the features that make RightNow the smarter way to manage your tasks and time.</p>
-            <a href="FEATURES.md" class="btn btn-secondary">View All Features →</a>
-        </section>
-
         <section class="guidelines">
             <h2>Before Creating an Issue</h2>
             <ol>
@@ -119,6 +113,8 @@
             <div class="footer-links">
                 <a href="https://github.com/aeropher/rtnwapp">GitHub</a>
                 <a href="https://rtnw.app">Try RightNow</a>
+                <a href="FEATURES.md">Docs</a>
+                <a href="blog.html">Blog</a>
                 <a href="https://github.com/aeropher/rtnwapp/discussions">Discussions</a>
             </div>
         </div>
