Add RSS feed support to blog and index pages, and implement RSS generator

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="Logo1.png">
     <link rel="apple-touch-icon" href="Logo1.png">
+    
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/rss+xml" title="RightNow Blog RSS" href="https://rtnw.app/rss.xml">
 </head>
 <body>
     <header>
@@ -23,6 +26,7 @@
             </div>
             <nav class="header-nav">
                 <a href="index.html">← Back to Issues</a>
+                <a href="rss.xml" class="rss-link">RSS Feed</a>
             </nav>
         </div>
     </header>
