--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="Logo1.png">
     <link rel="apple-touch-icon" href="Logo1.png">
+    
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/rss+xml" title="RightNow Blog RSS" href="https://rtnw.app/rss.xml">
 </head>
 <body>
     <header>
