Remove redundant footer message about issue triaging in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 RightNow. All issues are triaged and implemented in our private development repository.</p>
+            <p>&copy; 2024 RightNow.</p>
             <div class="footer-links">
                 <a href="https://github.com/aeropher/rtnwapp">GitHub</a>
                 <a href="https://rtnw.app">Try RightNow</a>
