Add support link to Ko-fi across multiple pages and style adjustments

--- a/blog.html
+++ b/blog.html
@@ -50,6 +50,7 @@
                 <a href="https://github.com/aeropher/rtnwapp">GitHub</a>
                 <a href="https://rtnw.app">Try RightNow</a>
                 <a href="index.html">Issues & Feedback</a>
+                <a href="https://ko-fi.com/aerpher" class="ko-fi-link">☕ Support</a>
             </div>
         </div>
     </footer>
