--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -188,6 +188,7 @@
                 <a href="index.html">Home</a>
                 <a href="blog.html">Blog</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="https://ko-fi.com/aerpher" class="ko-fi-link">☕ Support</a>
             </div>
         </div>
     </footer>
