--- a/delete-account.html
+++ b/delete-account.html
@@ -180,6 +180,7 @@
                 <a href="blog.html">Blog</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="delete-account.html">Delete Account</a>
+                <a href="https://ko-fi.com/aerpher" class="ko-fi-link">☕ Support</a>
             </div>
         </div>
     </footer>
