--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <a href="blog.html">Blog</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
                 <a href="https://github.com/aeropher/rtnwapp/discussions">Discussions</a>
+                <a href="https://ko-fi.com/aerpher" class="ko-fi-link">☕ Support</a>
             </div>
         </div>
     </footer>
