Add Ko-fi support widget and Discord link to multiple pages; update footer styles for better layout

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -181,6 +181,10 @@
 
     <footer>
         <div class="container">
+            <div class="ko-fi-widget-container">
+                <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+                <script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#f59e0b', 'D1D1GWP6Z');kofiwidget2.draw();</script>
+            </div>
             <p>&copy; 2025 RightNow. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://github.com/aeropher/rtnwapp">GitHub</a>
@@ -188,6 +192,7 @@
                 <a href="index.html">Home</a>
                 <a href="blog.html">Blog</a>
                 <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="https://discord.gg/YzYagEZcnt">Discord</a>
                 <a href="https://ko-fi.com/aerpher" class="ko-fi-link">☕ Support</a>
             </div>
         </div>
