--- a/blog.html
+++ b/blog.html
@@ -45,11 +45,16 @@
 
     <footer>
         <div class="container">
+            <div class="ko-fi-widget-container">
+                <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
+                <script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#f59e0b', 'D1D1GWP6Z');kofiwidget2.draw();</script>
+            </div>
             <p>&copy; 2024 RightNow. All issues are triaged and implemented in our private development repository.</p>
             <div class="footer-links">
                 <a href="https://github.com/aeropher/rtnwapp">GitHub</a>
                 <a href="https://rtnw.app">Try RightNow</a>
                 <a href="index.html">Issues & Feedback</a>
+                <a href="https://discord.gg/YzYagEZcnt">Discord</a>
                 <a href="https://ko-fi.com/aerpher" class="ko-fi-link">☕ Support</a>
             </div>
         </div>
