Update testimonial quote and author in the footer for improved messaging; revise CTA text for clarity

--- a/landing.html
+++ b/landing.html
@@ -560,8 +560,8 @@
     <section class="testimonial-section">
         <div class="container">
             <div class="testimonial-card">
-                <p class="quote">"I've tried every productivity app out there. RightNow is the first one that actually helps me finish my day feeling successful instead of stressed. The capacity-first approach changed everything."</p>
-                <p class="author">- Sarah, Product Manager</p>
+                <p class="quote">"Creating RightNow has been an incredibly fulfilling journey. As someone who's struggled with traditional productivity apps that push you to do more and more, I wanted to build something different - an app that respects your capacity and helps you achieve more by doing less. Seeing how it's helped people manage their tasks without feeling overwhelmed has been the greatest reward. It's not just about getting things done; it's about feeling good while doing it."</p>
+                <p class="author">- Alex, Creator of RightNow</p>
             </div>
         </div>
     </section>
@@ -570,7 +570,7 @@
     <section class="cta-section">
         <div class="container">
             <h2>Ready to Actually Finish Your Todo List?</h2>
-            <p>Join thousands who've discovered the power of realistic planning.</p>
+            <p>Discover the power of realistic planning with RightNow.</p>
             <a href="https://rtnw.app" class="cta-button">Start Your First Realistic Day - Free</a>
             <p style="margin-top: 20px; color: #666;">No signup required to try • Free forever</p>
         </div>
